--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 
-<link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
+<html>
+
+<head>
+
+<title>getHiredNOW</title>
+
+</head>
 
 <h1> HIRED! </h1>
+
+<link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -27,8 +35,6 @@
       </div>
     </div>
     
-
-<
 
   </div>
 
@@ -57,4 +63,7 @@
   ga('send', 'pageview');
 
 </script>
+
+
+</html>
 
