--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
 <title>getHiredNOW</title>
 
+<link rel='stylesheet' type='text/css' href='getHired.css'>
+
 </head>
+
+<body>
 
 <h1> HIRED! </h1>
 
@@ -64,6 +68,6 @@
 
 </script>
 
-
+</body>
 </html>
 
