--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <h2> Finding your future self! </h2>
 
-<p> A Matiluko and Adesina production </p>
+<3> A Matiluko and Adesina production </h3>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
