--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
 
 
-</head>
+<head>
 
 <body>
 
@@ -99,6 +99,7 @@
 
 </script>
  
+ <head>
  <style>
 
 div { height: 150px; width: 300px;margin: 0 auto; }
@@ -126,7 +127,7 @@ div { height: 150px; width: 300px;margin: 0 auto; }
 
 </div>
 </body>
- 
+ </head>
  
  
 
