--- a/index.html
+++ b/index.html
@@ -2,26 +2,19 @@
 
 <html>
 
- 
 <head>
 
 <title>getHiredNOW</title>
 
 <link rel='stylesheet' type='text/css' href='getHired.css'>
- 
 
-
-<head>
+</head>
 
 <body>
 
 <h1> HIRED! </h1>
 
 <p> The best site for getting the best job! <p>
- 
- 
-
-</div>
 
 
 
@@ -87,8 +80,8 @@
     </a>
   </div>
 </div>
- 
- <h2> Finding your future self </h2>
+
+<h2> Finding your future self! </h2>
 
 <h6> A Matiluko and Adesina production </h6>
 
@@ -97,21 +90,9 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-87397956-1', 'auto');
   ga('send', 'pageview');
-
 </script>
- 
-
-
-
-
- 
- 
-
+ </body>
 
 </html>
-
-
-
