--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <div class="item active">
         <img src="job1.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
+         <h3> CV tips </h3>
           
         </div>
       </div>
@@ -59,6 +60,7 @@
       <div class="item">
         <img src="job3.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
+         <h3> Target Jobs </h3>
     
         </div>
       </div>
