--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 </head>
 
 <body>
+ 
+ <a href="https://www.totaljobs.com/careers-advice/cvs-and-applications/successful-cv">
+  <img src="job1.jpg" alt="HTML tutorial" style="width:42px;height:42px;border:0;">
+</a>
 
+ <a href="https://targetjobs.co.uk">
+  <img src="job3.jpg" alt="HTML tutorial" style="width:42px;height:42px;border:0;">
+</a>
 <h1> HIRED! </h1>
 
 <p> The best site for getting the best job! <p>
