--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
      
       <div class="item active">
-        <a href="file:///Users/Seun/Desktop/1%20index.html">
+        <a href="https://gethirednow.github.io/robotrobt/">
         <img src="mascot1.jpg" alt="Chania" width="460" height="345">
        </a>
         <div class="carousel-caption">
