--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
      
       <div class="item active">
         <a href="https://gethirednow.github.io/robotrobt/">
-        <img src="job2.jpg" alt="Chania" width="460" height="345">
+        <img src="mascot.jpg" alt="Chania" width="460" height="345">
        </a>
         <div class="carousel-caption">
          <h3> Our #getHirednow mascot </h3>
