--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
 
 <title>getHiredNOW</title>
+ 
+ <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
 <link rel='stylesheet' type='text/css' href='getHired.css'>
 
