--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <title>getHiredNOW</title>
  
- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<link rel="shortcut icon" href="favicon.ico" type="image/ico" />
 
 <link rel='stylesheet' type='text/css' href='getHired.css'>
 
