--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <title>getHiredNOW</title>
  
-<link rel="shortcut icon" href="gethiredfavicon.ico" type="image/ico" />
+ <link rel="icon" type="image/x-icon" href="gethiredfavicon.ico">
 
 <link rel='stylesheet' type='text/css' href='getHired.css'>
 
