--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
        </a>
         <div class="carousel-caption">
          <h3> Our #getHirednow mascot </h3>
-         <p> A fun diversion from career stress!) </p>
+         <p> A fun diversion from career stress! </p>
           
         </div>
       </div>
