--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
  <link rel="icon" type="image/x-icon" href="gethiredfavicon.ico">
 
 <link rel='stylesheet' type='text/css' href='getHired.css'>
+ 
+ <!-- For the Social Media Button -->
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({publisher: "d555e7f2-9fcb-40a4-9664-34ffad29b31f", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+    
+
+<div class = "container" id ="socialmedia">
+    <span class='st_sharethis_hcount' displayText='ShareThis'></span>
+    <span class='st_facebook_hcount' displayText='Facebook'></span>
+    <span class='st_twitter_hcount' displayText='Tweet'></span>
+    <span class='st_pinterest_hcount' displayText='Pinterest'></span>
+</div>
+
+</body>
+</html>     
 
 </head>
 
