--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 </tr>
 <tr>
  <td valign="top">
-  <label for="comments">Comments *</label>
+  <label for="comments">CV and Covering Letter *</label>
  </td>
  <td valign="top">
   <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
