--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 <h2> Finding your future self! </h2>
      
-   <a href="https://gethirednow.github.io/robotrobt/">Take a break with out getHIREDnow mascot!</a> 
+   <a href="https://gethirednow.github.io/robotrobt/">Take a break with our getHIREDnow mascot!</a> 
 
 <h6> A Matiluko and Adesina production </h6>
 
