--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <img src="job1.jpg" alt="Chania" width="460" height="345">
        </a>
       <div class="carousel-caption">
+         <h3> CV tips </h3>
         
       </div>
     </div>
@@ -100,6 +101,7 @@
         <img src="job3.jpg" alt="Chania" width="460" height="345">
        </a>
       <div class="carousel-caption">
+             <h3> Target Jobs </h3>
         
 
       </div>
