--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
  
 <h1> HIRED! </h1>
+ 
+ <style>
+  
+  h1 { text-align:centre;}
+  
+ </style>
+ 
+ <h2> A more employable you </h2>
 
 <link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
 
